# game_rpg

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  build_deps.sh
data/client/shader/: default.fs  default.vs  tilemap.fs.glsl  tilemap.vs.glsl
data/client/sprites/: Attribution.txt
doc/: game_aspects.md  map_generation.md  protocol.md
src/game/: client.rs
src/game/client/: app.rs  engine.rs  main.rs  math.rs  shader.rs  tilemap.rs
src/game/shared/: mod.rs  tilemap.rs
src/gclient/: app.rs  engine.rs  main.rs  shader.rs  tilemap.rs
src/gcore/: lib.rs
src/gcore/map/: world.rs
src/gserver/: main.rs
